# aHand

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Cross.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: README.md  client-ci.yml  deploy-hub.yml  hub-ci.yml  qisi-deploy-hub.yml  qisi-deploy.yml  release-admin.yml  release-browser.yml  release-hub.yml  release-rust.yml  release-sdk.yml  test-dist-scripts.yml  test-rust.yml
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
apps/dev-cloud/: package.json  tsconfig.json
apps/hub-dashboard/: .gitignore  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
contracts/: README.md  hub-webhook.json
crates/ahand-hub/: Cargo.toml
crates/ahand-hub-core/: Cargo.toml
crates/ahand-hub-core/src/: audit.rs  auth.rs  device.rs  error.rs  job.rs  lib.rs  outbox.rs  tests.rs  traits.rs
crates/ahand-hub-core/src/services/: audit_service.rs  device_manager.rs  job_dispatcher.rs  mod.rs
crates/ahand-hub-core/tests/: audit_service.rs  auth_service.rs  device_manager.rs  job.rs  job_dispatcher.rs  outbox.rs
crates/ahand-hub-store/: Cargo.toml
crates/ahand-hub-store/migrations/: 0001_initial.sql  0002_external_user_id.sql  0003_webhook_deliveries.sql  0004_jobs_interactive.sql  0005_job_execution_mode.sql
crates/ahand-hub-store/src/: app_tool_store.rs  audit_store.rs  bootstrap_store.rs  device_store.rs  event_fanout.rs  job_output_store.rs  job_store.rs  lib.rs  outbox_lua.rs  outbox_store.rs  postgres.rs  presence_store.rs  redis.rs  test_support.rs  webhook_delivery_store.rs
crates/ahand-hub-store/tests/: store_roundtrip.rs
crates/ahand-hub-store/tests/support/: mod.rs
crates/ahand-hub/src/: app_tool_service.rs  audit_writer.rs  auth.rs  bootstrap.rs  browser_service.rs  config.rs  control_jobs.rs  events.rs  file_service.rs  lib.rs  main.rs  observability.rs  output_stream.rs  pending_file_requests.rs  pending_runtime_requests.rs  runtime_service.rs  s3.rs  state.rs
crates/ahand-hub/src/http/: admin.rs  api_error.rs  audit.rs  auth.rs  browser.rs  control_files_dto.rs  control_plane.rs  devices.rs  files.rs  jobs.rs  mod.rs  system.rs  terminal.rs
crates/ahand-hub/src/webhook/: mod.rs  sender.rs  tests.rs  worker.rs
crates/ahand-hub/src/ws/: dashboard.rs  device_gateway.rs  in_memory_outbox.rs  mod.rs
crates/ahand-hub/tests/: admin_api.rs  app_tool_catalog.rs  app_tool_invoke.rs  browser_api.rs  control_files.rs  control_plane.rs  dashboard_api.rs  device_gateway.rs  heartbeat_forward.rs  http_files.rs  job_flow.rs  job_output_resume.rs  outbox_persistence.rs  persistent_store.rs  system_api.rs  webhook_sender.rs
crates/ahand-hub/tests/support/: mod.rs
crates/ahand-platform/: Cargo.toml
crates/ahand-platform/src/: ipc.rs  lib.rs  paths.rs  process.rs  secure_file.rs  shell.rs  signals.rs
crates/ahand-protocol/: Cargo.toml  build.rs  package.json
crates/ahandctl/: Cargo.toml  package.json
crates/ahandctl/src/: admin.rs  browser_init.rs  daemon.rs  github_release.rs  identity.rs  install_daemon.rs  lib.rs  main.rs  upgrade.rs
crates/ahandctl/src/upgrade/: assets.rs  mod.rs  release.rs
crates/ahandctl/tests/: upgrade_release.rs
crates/ahandd/: Cargo.toml  package.json
crates/ahandd/src/: ahand_client.rs  approval.rs  browser.rs  browser_cdp.rs  browser_init.rs  client.rs  config.rs  device_identity.rs  dpapi.rs  executor.rs  fs_perms.rs  ipc.rs  lib.rs  main.rs  outbox.rs  policy.rs  public_api.rs  registry.rs  result_parser.rs  session.rs  store.rs  updater.rs
crates/ahandd/src/agent/: claude_code.rs  hermes_acp.rs  mcp_config.rs  mod.rs
crates/ahandd/src/app_tool_registry/: mod.rs
crates/ahandd/src/browser_setup/: browser_detect.rs  mod.rs  node.rs  playwright.rs  progress_format.rs  python.rs  types.rs
crates/ahandd/src/cli/: browser_doctor.rs  browser_init.rs  mod.rs
crates/ahandd/src/file_manager/: binary_read.rs  fs_ops.rs  io_safe.rs  mod.rs  pdf_read.rs  policy.rs  text_read.rs  write_ops.rs
crates/ahandd/src/openclaw/: client.rs  device_identity.rs  exec_approvals.rs  handler.rs  mod.rs  pairing.rs  protocol.rs
crates/ahandd/src/plugin_runtime/: activation.rs  builtin.rs  capability.rs  host_resource.rs  install.rs  manifest.rs  mod.rs  path_env.rs  provider.rs  registry.rs  resource.rs  runtime_dir.rs
crates/ahandd/src/sandbox/: file_lifecycle.rs  mod.rs  mounts.rs  path_policy.rs  registry.rs  runner.rs  tool_provider.rs  types.rs
crates/ahandd/src/sandbox/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
crates/ahandd/src/sandbox/platform/windows/: acl.rs  cap.rs  capture.rs  dpapi.rs  env.rs  firewall.rs  identity.rs  mod.rs  network.rs  path.rs  process.rs  roots.rs  sandbox_users.rs  setup.rs  setup_error.rs  token.rs  winutil.rs
crates/ahandd/tests/: app_tools.rs  browser_doctor.rs  dpapi_test.rs  file_ops.rs  file_ops_e2e.rs  file_ops_s3_write.rs  fs_perms_test.rs  hello_signature.rs  hub_handshake.rs  ipc_roundtrip.rs  job_request_tool.rs  lib_spawn.rs  sandbox_api.rs  sandbox_network_policy.rs  sandbox_smoke.rs  sandbox_types.rs
crates/ahandd/tests/mock_hub/: mod.rs
deploy/hub/: Dockerfile  deploy.sh  docker-compose.yml  task-definition.template.json
deploy/qisi/: compose.yml
docs/: CLAUDE_CODE_DATA_EXCHANGE.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_MCP_INJECTION.md  CODEX_MCP_INJECTION.md  HERMES_DATA_EXCHANGE.md  HERMES_INTEGRATION.md  HERMES_MCP_INJECTION.md  agent-stdio-formats.md  architecture-overview.md  cc-connect.md  remote-control-roadmap.md
docs/examples/: capability-hub-mcp.json
docs/plans/: 2026-03-04-team9-ahand-integration.md  (+14 more)
infra/: README.md  stream-c-audit.md
keys/: README.md  release.pub
scripts/: ahand_with_mcp  bump-version.sh  compare_observations.py  deploy-admin.sh  release.sh  setup-browser.sh  smoke-claude-code-format.sh  smoke-codex-format.sh  smoke-hermes-acp-format.sh  verify-aws-staging-config.sh
(+333 files in other folders)
