[workspace]
resolver = "2"
members = [
    "crates/ahand-protocol", "crates/ahandctl",
    "crates/ahandd",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
