[workspace]
resolver = "2"
members = [
    "crates/ahand-protocol", "crates/ahandctl",
    "crates/ahandd",
    "crates/ahand-hub-core",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
async-trait = "0.1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
