[package]
name = "ahand-hub-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = []

[lib]
doctest = false

[[test]]
name = "store_roundtrip"
required-features = ["test-support"]

[dependencies]
ahand-hub-core = { path = "../ahand-hub-core" }
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
chrono.workspace = true
futures-util = "0.3"
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers.workspace = true
