[package]
name = "ahand-hub-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["dep:testcontainers"]

[lib]
doctest = false

[dependencies]
ahand-hub-core = { path = "../ahand-hub-core" }
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util = "0.3"
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
testcontainers = { workspace = true, optional = true }
tokio.workspace = true
tracing = { workspace = true }
uuid.workspace = true

[dev-dependencies]
testcontainers.workspace = true
