[package]
name = "ahand-hub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahand-hub-core = { path = "../ahand-hub-core" }
ahand-hub-store = { path = "../ahand-hub-store" }
ahand-protocol = { path = "../ahand-protocol" }
anyhow.workspace = true
async-trait.workspace = true
async-stream = "0.3"
base64 = "0.22"
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
governor = "0.6"
hex = "0.4"
hmac = "0.12"
prost.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
subtle = "2"
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid = "1"
url = "2"
uuid.workspace = true

# S3 support for large file transfer. Optional in config; skipped at runtime
# when the `[s3]` section is not present in the hub config.
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }

[dev-dependencies]
ahand-hub-store = { path = "../ahand-hub-store", features = ["test-support"] }
# Used by the `s3` test module to build an `aws_sdk_s3::Client` with explicit
# synthetic credentials, avoiding unsafe process-wide env var mutation.
aws-credential-types = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
prost.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.28"
