[package]
name = "ahandctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahand-protocol = { path = "../ahand-protocol" }
tokio.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
gethostname = "1"
serde.workspace = true
serde_json.workspace = true

# Admin panel dependencies
warp = "0.3"
open = "5"
toml = "0.8"
rand = "0.8"
dirs = "5"
