[package]
name = "ahandd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahand-protocol = { path = "../ahand-protocol" }
tokio.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
futures-util = "0.3"
gethostname = "1"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
