[package]
name = "ahandd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahand-protocol = { path = "../ahand-protocol" }
tokio.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
futures-util = "0.3"
gethostname = "1"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream", "json"] }
tar = "0.4"
flate2 = "1"
xz2 = { version = "0.1", features = ["static"] }
tokio-util = { version = "0.7", features = ["io"] }
semver = "1"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
zip = "2"

[dev-dependencies]
tempfile = "3"
